--- a/Compito_2/header.html
+++ b/Compito_2/header.html
@@ -2,14 +2,14 @@
 	<div class="container-fluid">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
-			<a class="navbar-brand" href="/EsercizioLavoro1/index.html">Home</a>
+			<a class="navbar-brand" href="/index.html">Home</a>
 		</div>
 		<ul class="nav navbar-nav navbar-right">
 			<li>
-				<a href="/EsercizioLavoro1/presentation.html"> Presentazione </a>
+				<a href="/presentation.html"> Presentazione </a>
 			</li>
 			<li>
-				<a href="/EsercizioLavoro1/form.html">
+				<a href="/form.html">
 					Registrati
 				</a>
 			</li>
