--- a/Compito_2/footer.html
+++ b/Compito_2/footer.html
@@ -1,11 +1,13 @@
-<div class="row">
-	<div class="col-md-6">
-		<div>Autore: Davide Pignotti</div>
-		<div>Data:"aggiornare data dinamicamente"</div>
-		<div>Citta': Roma</div>
-	</div>
-	<div class="col-md-6">
-		<div>Contatti: Tel: 334 52 42 546</div>
-		<div>Email: davide@gmail.com</div>
+<div class="panel information">
+	<div class="row">
+		<div class="col-md-6">
+			<div>Autore: Davide Pignotti</div>
+			<div>Data:"aggiornare data dinamicamente"</div>
+			<div>Citta': Roma</div>
+		</div>
+		<div class="col-md-6">
+			<div>Contatti: Tel: 334 52 42 546</div>
+			<div>Email: davide@gmail.com</div>
+		</div>
 	</div>
 </div>
