--- a/Compito_2/index.html
+++ b/Compito_2/index.html
@@ -8,8 +8,9 @@
 <title>Benvenuto</title>
 
 <!-- Bootstrap -->
-<link rel="stylesheet" href="resources/css/bootstrap.min.css">
-<link rel="stylesheet" href="resources/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="resources/css/bootstrap.css">
+<link rel="stylesheet" href="resources/css/bootstrap-theme.css">
+<link rel="stylesheet" href="resources/css/common.css">
 <link rel="stylesheet" href="resources/css/index.css">
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -23,29 +24,31 @@
 	<div class="container">
 		<div id="header"></div>
 
-		<div class="jumbotron">
-			<div>
-				<h1>Benvenuto!</h1>
+		<div class="jumbotron myJumboStyle">
+			<div class="row">
+				<div class="col-md-1">
+					<img class="img-responsive" alt="pippo-gif" src="resources/images/gifPippo.gif">
+				</div>
+				<div class="col-md-11">
+					<h1>Benvenuto!</h1>
+				</div>
 			</div>
-			<div>
-				<img alt="pippo-gif" src="resources/images/gifPippo.gif">
-				<h3>
-					Su questa pagina troverai tutte le informazioni su di me! Ovvero
-					Pippo! Non solo... Avrai anche l'opportunità di iscriverti per
-					entrare a far parte della nostra community.
-					<br>
-					<br>
-					Clicca sul pulsante "Registrati", immetti rapidamente i tuoi dati e
-					riceverai tutte le notizie sui nostri disco-party in stile Disney!
-				</h3>
+			<div class="row">
+				<div class="col-md-12">
+					<h3>
+						Su questa pagina troverai tutte le informazioni su di me! Ovvero Pippo! Non solo... Avrai anche l'opportunità di iscriverti per entrare a
+						far parte della nostra community.
+						<br>
+						<br>
+						Clicca sul pulsante "Registrati", immetti rapidamente i tuoi dati e riceverai tutte le notizie sui nostri disco-party in stile Disney!
+					</h3>
+				</div>
 			</div>
 		</div>
 		<div id="footer"></div>
-
 	</div>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="resources/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="resources/js/common.js"></script>
