--- a/Compito_2/presentation.html
+++ b/Compito_2/presentation.html
@@ -7,16 +7,16 @@
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 <title>Presentazione</title>
 
-<link rel="stylesheet" href="resources/css/bootstrap.min.css">
-<link rel="stylesheet" href="resources/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="resources/css/myStyle1.css">
+<link rel="stylesheet" href="resources/css/bootstrap.css">
+<link rel="stylesheet" href="resources/css/common.css">
+<link rel="stylesheet" href="resources/css/presentation.css">
 </head>
 
 <body>
 	<div class="container">
 
 		<div id="header"></div>
-		<div class="jumbotron">
+		<div>
 
 			<div class="row">
 				<div class="col-md-12 text-center">
