--- a/Compito_2/presentation.html
+++ b/Compito_2/presentation.html
@@ -20,7 +20,7 @@
 
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<h1>Nome Cognome</h1>
+					<h1>Davide Pignotti</h1>
 				</div>
 			</div>
 			<div class="row">
