final commit -end day

--- a/Compito_2/presentation.html
+++ b/Compito_2/presentation.html
@@ -16,50 +16,48 @@
 	<div class="container">
 
 		<div id="header"></div>
-		<div>
 
-			<div class="row">
-				<div class="col-md-12 text-center">
-					<h1>Davide Pignotti</h1>
-				</div>
+
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<h1>Davide Pignotti</h1>
 			</div>
-			<div class="row">
-				<div class="col-md-1">
-					<img alt="Pippo" src="resources/images/pippo.jpg"
-						class="img-responsive border-black">
-				</div>
-				<div class="col-md-11">
-					<ul class="list-unstiled">
-						<li>
-							<span class="label label-default">Nome: </span>
-							<span>Davide</span>
-						</li>
-						<li>
-							<span class="label label-default">Cognome: </span>
-							<span>Pignotti</span>
-						</li>
-						<li>
-							<span class="label label-default"> Data: </span>
-							<span data-toggle="tooltip" data-placement="right"
-								title="gg/mm/aaaa">11/11/1900</span>
-						</li>
-						<li>
-							<span class="label label-info">Città: </span>
-							<span>Roma</span>
-						</li>
-						<li>
-							<span class="glyphicon glyphicon-envelope"> </span>
-							<span class="label label-info">Email: </span>
-							<a href="mailto:pippo@gmail.com" target="_newtab">pippo@gmail.com</a>
-						</li>
-						<li>
-							<span class="glyphicon glyphicon-earphone"> </span>
-							<span class="label label-info">Telefono: </span>
-							<span> 333 222 111 11</span>
-						</li>
-					</ul>
-				</div>
+		</div>
+		<div class="row">
+			<div class="col-md-1">
+				<img alt="Pippo" src="resources/images/pippo.jpg" class="img-responsive border-black">
 			</div>
+			<div class="col-md-11">
+				<ul class="list-unstiled">
+					<li>
+						<span class="label label-default">Nome: </span>
+						<span>Davide</span>
+					</li>
+					<li>
+						<span class="label label-default">Cognome: </span>
+						<span>Pignotti</span>
+					</li>
+					<li>
+						<span class="label label-default"> Data: </span>
+						<span data-toggle="tooltip" data-placement="right" title="gg/mm/aaaa">11/11/1900</span>
+					</li>
+					<li>
+						<span class="label label-info">Città: </span>
+						<span>Roma</span>
+					</li>
+					<li>
+						<span class="glyphicon glyphicon-envelope"> </span>
+						<span class="label label-info">Email: </span>
+						<a href="mailto:pippo@gmail.com" target="_newtab">pippo@gmail.com</a>
+					</li>
+					<li>
+						<span class="glyphicon glyphicon-earphone"> </span>
+						<span class="label label-info">Telefono: </span>
+						<span> 333 222 111 11</span>
+					</li>
+				</ul>
+			</div>
+
 			<div class="row">
 				<div class="col-md-12">
 					<div class="panel panel-default">
@@ -85,11 +83,9 @@
 							</ul>
 						</div>
 						<div class="panel-footer">
-							<button type="button" class="btn btn-primary btn-large"
-								data-toggle="modal" data-target="#myModal">Skill</button>
+							<button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#myModal">Skill</button>
 						</div>
-						<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
-							aria-labelledby="purchaseLabel" aria-hidden="true">
+						<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="purchaseLabel" aria-hidden="true">
 							<div class="modal-dialog">
 								<div class="modal-content">
 									<div class="modal-header">
@@ -119,8 +115,7 @@
 										</table>
 									</div>
 									<div class="modal-footer">
-										<button type="button" class="btn btn-default"
-											data-dismiss="modal">Close</button>
+										<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 									</div>
 								</div>
 							</div>
@@ -132,8 +127,7 @@
 				<div class="col-md-12">
 					<div class="panel panel-default">
 						<div class="panel-heading">Istruzione</div>
-						<div class="panel-body">Ho conseguito il titolo
-							di.................................................</div>
+						<div class="panel-body">Ho conseguito il titolo di.................................................</div>
 					</div>
 				</div>
 			</div>
@@ -142,8 +136,7 @@
 
 		<div id="footer"></div>
 	</div>
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="resources/js/bootstrap.min.js"></script>
 	<script src="resources/js/common.js"></script>
 	<script src="resources/js/fileJavascript1.js"></script>
