--- a/Compito_2/footer.html
+++ b/Compito_2/footer.html
@@ -2,13 +2,18 @@
 	<div class="panel-body">
 		<div class="row">
 			<div class="col-md-6">
-				<div>Autore: Davide Pignotti</div>
-				<div>Data:"aggiornare data dinamicamente"</div>
-				<div>Citta': Roma</div>
+			<ul class="list-unstyled"> 
+			<li>Autore: Davide Pignotti</li>
+			<li>Data: 08/08/2016</li>
+			<li>Citta': Roma</li>
+		
+			</ul>
 			</div>
 			<div class="col-md-6">
-				<div>Contatti: Tel: 334 52 42 546</div>
-				<div>Email: davide@gmail.com</div>
+				<ul class="list-unstyled"> 
+			<li>Contatti: Tel: 334 52 42 546</li>
+			<li>Email: davide@gmail.com</li>
+				</ul>
 			</div>
 		</div>
 	</div>
