--- a/Compito_AngularJs/index.html
+++ b/Compito_AngularJs/index.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html ng-app>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Index</title>
+
+<link rel="stylesheet" href="assets/css/bootstrap.css">
 </head>
 <body>
+	<div class="container">
+		Name:
+		<br>
+		<input type="text" ng-model="name">
+		{{ name }}
+		<div ng-init="names=['Dave', 'Napur','Heedy']">
+			<h3>Looping with the ng-repeatDirective</h3>
+			<ul>
+				<li ng-repeat="n in names">{{ n }}</li>
+
+			</ul>
+		</div>
+		<div ng-init="customers=[{name:'John Smith', city:'Phoenix'},{name:'John Doe', city:'New York'},{name:'Jane Doe',city:'San Francisco'}]">
+		<ul>
+		<li ng-repeat="cust in customers | filter:name">{{cust.name | uppercase}} vive a {{cust.city |lowercase}}</li>
+		</ul>
+		</div>
+	</div>
+	<script type="text/javascript" src="assets/js/vendor/angular.min.js"></script>
+	<script type="text/javascript" src="assets/js/vendor/jquery-3.1.0.min.js"></script>
 
 </body>
 </html>
