--- a/Compito_AngularJs/index.html
+++ b/Compito_AngularJs/index.html
@@ -60,7 +60,7 @@
 
 	<script type="text/javascript" src="assets/js/vendor/angular.js"></script>
 	<script type="text/javascript" src="assets/js/vendor/angular-route.js"></script>
-	<script type="text/javascript" src="assets/js/vendor/jquery-3.1.0.min.js"></script>
+	<script type="text/javascript" src="assets/js/vendor/jquery-3.1.0.js"></script>
 	<script type="text/javascript" src="assets/js/vendor/jquery-ui.js"></script>
 	<script src="assets/js/vendor/bootstrap.js"></script>
 	<script src="assets/js/vendor/moment.js"></script>
