--- a/Compito_2/presentation.html
+++ b/Compito_2/presentation.html
@@ -28,7 +28,7 @@
 				<img alt="Pippo" src="resources/images/pippo.jpg" class="img-responsive border-black">
 			</div>
 			<div class="col-md-11">
-				<ul class="list-unstiled">
+				<ul class="list-unstyled">
 					<li>
 						<span class="label label-default">Nome: </span>
 						<span>Davide</span>
