--- a/Compito_AngularJs/index.html
+++ b/Compito_AngularJs/index.html
@@ -66,6 +66,7 @@
 	<script src="assets/js/vendor/moment.js"></script>
 	<script src="assets/js/vendor/bootstrap-datetimepicker.min.js"></script>
 	<script type="text/javascript" src="assets/js/app.js"></script>
+	<script type="text/javascript" src="assets/js/controllers/formCtrl.js"></script>
 
 </body>
 </html>
