commit service & directive built

--- a/Compito_AngularJs/index.html
+++ b/Compito_AngularJs/index.html
@@ -66,6 +66,8 @@
 	<script src="assets/js/vendor/bootstrap-datetimepicker.min.js"></script>
 	<script type="text/javascript" src="assets/js/app.js"></script>
 	<script type="text/javascript" src="assets/js/controllers/formCtrl.js"></script>
+<script type="text/javascript" src="assets/js/services/peopleService.js"></script>
 
+<script type="text/javascript" src="assets/js/directive/onlyDigits.js"></script>
 </body>
 </html>
