--- a/Compito_AngularJs/index.html
+++ b/Compito_AngularJs/index.html
@@ -4,7 +4,9 @@
 <meta charset="ISO-8859-1">
 <title>Index</title>
 <link rel="stylesheet" href="assets/css/bootstrap.css">
+<link rel="stylesheet" href="assets/css/font-awesome.css">
 <link rel="stylesheet" href="assets/css/index.css">
+<link rel="stylesheet" href="assets/css/buttons.css">
 </head>
 
 
@@ -17,6 +19,9 @@
 					<a class="navbar-brand" href="#/">Home</a>
 				</div>
 				<ul class="nav navbar-nav navbar-right">
+					<li>
+						<a href="#buttons">Bottoni</a>
+					</li>
 					<li>
 						<a href="#presentation"> Presentazione </a>
 					</li>
@@ -56,7 +61,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<script type="text/javascript" src="assets/js/vendor/jquery-3.1.0.js"></script>
 	<script type="text/javascript" src="assets/js/vendor/jquery-ui.js"></script>
 	<script type="text/javascript" src="assets/js/vendor/angular.js"></script>
@@ -66,8 +71,10 @@
 	<script src="assets/js/vendor/bootstrap-datetimepicker.min.js"></script>
 	<script type="text/javascript" src="assets/js/app.js"></script>
 	<script type="text/javascript" src="assets/js/controllers/formCtrl.js"></script>
-<script type="text/javascript" src="assets/js/services/peopleService.js"></script>
+	<script type="text/javascript" src="assets/js/services/peopleService.js"></script>
 
-<script type="text/javascript" src="assets/js/directive/onlyDigits.js"></script>
+	<script type="text/javascript" src="assets/js/directive/onlyDigits.js"></script>
+	
+	<script type="text/javascript" src="assets/js/bootstrapTooltip.js"></script>
 </body>
 </html>
