--- a/Compito_AngularJs/index.html
+++ b/Compito_AngularJs/index.html
@@ -2,6 +2,8 @@
 <html ng-app="myApp">
 <head>
 <meta charset="ISO-8859-1">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Index</title>
 <link rel="stylesheet" href="assets/css/bootstrap.css">
 <link rel="stylesheet" href="assets/css/font-awesome.css">
