--- a/WorkTasks/index.html
+++ b/WorkTasks/index.html
@@ -13,17 +13,17 @@
 </head>
 <body>
 
-	<div class="container-fluid">
+	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
 				<nav class="navbar">
 					<div class="container-fluid">
 						<div class="navbar-header">
-							<a class="navbar-brand">Home</a>
+							<a href="#" class="navbar-brand">Home</a>
 						</div>
 						<ul class="nav navbar-nav navbar-right">
 							<li>
-								<a>bho </a>
+								<a href="">Link to nothing</a>
 							</li>
 						</ul>
 					</div>
@@ -31,28 +31,16 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-10">
+			<div class="col-md-12">
 				<div class="jumbotron">
 					<h1>Benvenuto!</h1>
 					<h3>Questa pagina mostra i progressi di studio</h3>
 				</div>
 
 				<study-table></study-table>
-				
-
-
+			
 			</div>
-			<div class="col-md-2">
-				<div class="sidebar">
-					<ul class="sidebar-nav">
-						<li class="sidebar-brand">
-							<a ng-click=1;> CSS </a>
-							<a ng-click=2;> CSS </a>
-							<a ng-click=3;> CSS </a>
-						</li>
-					</ul>
-				</div>
-			</div>
+			
 
 
 
