--- a/EaselJs/index.html
+++ b/EaselJs/index.html
@@ -5,9 +5,36 @@
 <title>Insert title here</title>
 <link rel="stylesheet" href="assets/css/bootstrap.css">
 <link rel="stylesheet" href="assets/css/font-awesome.css">
+<link rel="stylesheet" href="assets/css/index.css">
 </head>
-<body>
+<body class="background" onload="init();">
+	<div class="container">
+		<nav class="navbar navbar-inverse">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="#">Home</a>
+				</div>
+				<div class="collapse navbar-collapse">
+					<ul class="nav navbar-nav">
+					</ul>
+				</div>
+			</div>
+		</nav>
+		
+		<div class="jumbotron background-green">
+		<h1>Benvenuto!!!!!</h1>
+		<h3>In questa pagina potrai provare tanti minigiochi! Tutti implementati con EaselJs</h3>
+		</div>
+		
+		<div class="panel">
+			<div class="panel-heading text-center background-red"><h2 class="panel-title">Clicca sui cerchi!!!</h2></div>
+			<div class="panel-body">
+			<canvas id="demoCanvas"></canvas>
 
+			</div>
+		</div>
+
+	</div>
 
 
 	<script type="text/javascript" src="assets/js/vendor/jquery-3.1.0.js"></script>
@@ -17,5 +44,6 @@
 	<script src="assets/js/vendor/bootstrap.js"></script>
 	<script type="text/javascript" src="assets/js/app.js"></script>
 	<script type="text/javascript" src="assets/js/vendor/easeljs-0.8.2.combined.js"></script>
+	<script type="text/javascript" src="assets/js/controllers/canvasCtrl.js"></script>
 </body>
 </html>
