--- a/Rpg/index.html
+++ b/Rpg/index.html
@@ -24,9 +24,7 @@
 				<div class="collapse navbar-collapse" id="collapse1">
 					<ul class="nav navbar-nav navbar-right">
 						<li>
-							<div class="btn-nav">
-							nothing
-							</div>
+							<a href="#">Login</a>
 						</li>
 					</ul>
 				</div>
@@ -42,6 +40,8 @@
 	<script type="text/javascript" src="assets/js/app.js"></script>
 	<script type="text/javascript" src="assets/js/controllers/mapCtrl.js"></script>
 	<script type="text/javascript" src="assets/js/controllers/tabCtrl.js"></script>
+	<script type="text/javascript" src="assets/js/vendor/easeljs-0.8.2.combined.js"></script>
+	<script type="text/javascript" src="assets/js/controllers/canvasCtrl.js"></script>
 
 </body>
 </html>
